--- a/build.xml
+++ b/build.xml
@@ -5,13 +5,13 @@
 	<property file="build_number.properties" prefix="build_number"/>
 	<property name="build.dir.development" value="../../" />
 	<property name="build.dir.release" value="Releases" />
-	<property name="build.release.minecraft.version" value="1.5.2" />
+	<property name="build.release.minecraft.version" value="1.6.2" />
 	<property name="build.release.mod.version" value="0.0.1" /> 
 	
 	<target name="clean">
-		<delete file="${build.dir.development}\mcp\src\minecraft\mcmod.info" />
-		<delete dir="${build.dir.development}\mcp\src\minecraft\net\falco81" />
-		<delete dir="${build.dir.development}\mcp\reobf\minecraft" />
+		<delete file="${build.dir.development}\forge\mcp\src\minecraft\mcmod.info" />
+		<delete dir="${build.dir.development}\forge\mcp\src\minecraft\net\falco81" />
+		<delete dir="${build.dir.development}\forge\mcp\reobf\minecraft" />
 	</target>
 	
 	<target name="increment_build_number">
@@ -21,31 +21,31 @@
 	</target>
 	
 	<target name="prep">
-		<copy todir="${build.dir.development}\mcp\src\minecraft">
+		<copy todir="${build.dir.development}\forge\mcp\src\minecraft">
 			<fileset dir="${build.dir.development}\source\FaMod\famod_common\" />
 		</copy>
 	</target>
 	
 	<target name="replace_tokens">
-		<replace dir="${build.dir.development}\mcp\src\minecraft" token="@VERSION@" value="${build.release.mod.version}" />
-		<replace dir="${build.dir.development}\mcp\src\minecraft" token="@FINGERPRINT@" value="${build.release.mod.fingerprint}" />
-		<replace dir="${build.dir.development}\mcp\src\minecraft" token="@BUILD_NUMBER@" value="${build_number.build_number}" />
+		<replace dir="${build.dir.development}\forge\mcp\src\minecraft" token="@VERSION@" value="${build.release.mod.version}" />
+		<replace dir="${build.dir.development}\forge\mcp\src\minecraft" token="@FINGERPRINT@" value="${build.release.mod.fingerprint}" />
+		<replace dir="${build.dir.development}\forge\mcp\src\minecraft" token="@BUILD_NUMBER@" value="${build_number.build_number}" />
 	</target>
 	
 	<target name="recompile">
-		<exec dir="${build.dir.development}\mcp" executable="cmd" osfamily="windows">
+		<exec dir="${build.dir.development}\forge\mcp" executable="cmd" osfamily="windows">
 			<arg line="/c recompile.bat" />
 		</exec>
-		<exec dir="${build.dir.development}\mcp" executable="bash" osfamily="unix">
+		<exec dir="${build.dir.development}\forge\mcp" executable="bash" osfamily="unix">
 			<arg line="recompile.sh" />
 		</exec>
 	</target>
 	
 	<target name="reobfuscate">
-		<exec dir="${build.dir.development}\mcp" executable="cmd" osfamily="windows">
+		<exec dir="${build.dir.development}\forge\mcp" executable="cmd" osfamily="windows">
 			<arg line="/c reobfuscate_srg.bat" />
 		</exec>
-		<exec dir="${build.dir.development}\mcp" executable="bash" osfamily="unix">
+		<exec dir="${build.dir.development}\forge\mcp" executable="bash" osfamily="unix">
 			<arg line="reobfuscate_srg.sh" />
 		</exec>
 	</target>
@@ -65,8 +65,8 @@
 		<!-- Build the jar -->
 		<mkdir dir="${build.dir.release}\${build.release.minecraft.version}\${build.release.mod.version}" />
 		<jar destfile="${build.dir.release}\${build.release.minecraft.version}\${build.release.mod.version}\famod-${build.release.minecraft.version}-${build.release.mod.version}-${build_number.build_number}.jar">
-			<fileset dir="${build.dir.development}\mcp\src\minecraft\" includes="mcmod.info" />
-			<fileset dir="${build.dir.development}\mcp\reobf\minecraft" />
+			<fileset dir="${build.dir.development}\forge\mcp\src\minecraft\" includes="mcmod.info" />
+			<fileset dir="${build.dir.development}\forge\mcp\reobf\minecraft" />
 			<fileset dir="${build.dir.development}\source\famod\resources" excludes="**/xcf/**" />
 		</jar>
 		
@@ -86,9 +86,9 @@
 		<!-- Build the jar -->
 		<mkdir dir="${build.dir.release}\${build.release.minecraft.version}\${build.release.mod.version}" />
 		<jar destfile="${build.dir.release}\${build.release.minecraft.version}\${build.release.mod.version}\famod-${build.release.mod.version}-${build_number.build_number}.jar">
-			<fileset dir="${build.dir.development}\mcp\src\minecraft\" includes="mcmod.info" />
-			<fileset dir="${build.dir.development}\mcp\reobf\minecraft" />
-			<fileset dir="${build.dir.development}\source\famod\resources" excludes="**/xcf/**" />
+			<fileset dir="${build.dir.development}\forge\mcp\src\minecraft\" includes="mcmod.info" />
+			<fileset dir="${build.dir.development}\forge\mcp\reobf\minecraft" />
+			<fileset dir="${build.dir.development}\forge\source\famod\resources" excludes="**/xcf/**" />
 		</jar>
 		
 		<!-- Sign the finished jar -->
